# Terra

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Terra.c  Terra.h  TerraBVH.c  TerraBVH.h  TerraKDTree.c  TerraKDTree.h  TerraMath.h  TerraPresets.c  TerraPresets.h  stb_image.h
include/: Terra.h  TerraMath.h  TerraMath.inl  TerraPresets.h  TerraPrivate.h  TerraProfile.h  terra_next.h
satellite/: CMakeLists.txt  README.md  TODO.md  satellite.config
satellite/comparisons/Mitsuba 0.5.0/: cornell-box-glossy.serialized
satellite/comparisons/Mitsuba 0.5.0/sdk/lib/: mitsuba-bidir.lib  mitsuba-core.lib  mitsuba-hw.lib  mitsuba-render.lib
satellite/dependencies/stb/: stb_image.h  stb_image_write.h
satellite/include/: Apollo.h  App.hpp  Camera.hpp  CameraControls.hpp  Cloto.h  Config.hpp  Console.hpp  Device.hpp  Events.hpp  Graphics.hpp  LinearAlgebra.hpp  Logging.hpp  Messages.hpp  Messenger.hpp  OS.hpp  Object.hpp  Renderer.hpp  Scene.hpp  UI.hpp  Visualization.hpp
satellite/include/Panels/: Console.hpp  RendererControls.hpp  TextureVisualizer.hpp  Visualizer.hpp
satellite/include/Renderers/: ObjectRenderer.hpp  TerraRenderer.hpp  WireframeRenderer.hpp
satellite/shaders/: object.frag.glsl  object.vert.glsl  quad.frag.glsl  quad.vert.glsl
satellite/source/Panels/: TextureVisualizer.cpp
satellite/src/: App.cpp  Camera.cpp  CameraControls.cpp  Config.cpp  Console.cpp  Graphics.cpp  Logging.cpp  Messenger.cpp  OS.cpp  Object.cpp  Renderer.cpp  Satellite.cpp  Scene.cpp  UI.cpp  Visualization.cpp  stb_image_write.h
satellite/src/Panels/: Console.cpp  RendererControls.cpp  TextureVisualizer.cpp  Visualizer.cpp
satellite/src/Renderers/: ObjectRenderer.cpp  TerraRenderer.cpp
satellite/vs/: Satellite.vcxproj  Satellite.vcxproj.filters
src/: Terra.c  TerraAcceleration.c  TerraBVH.c  TerraBVH.h  TerraGeometry.c  TerraKDTree.c  TerraKDTree.h  TerraPresets.c  TerraPrivate.h  TerraProfile.c  (+3 more)
